Added new JVM parameter to use more memory during maven build